--- a/Project.ipynb
+++ b/Project.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "ax.set(xlabel='time (s)', ylabel='voltage (mV)',\n",
     "       title='The simplest plot in the world')\n",
-    "ax.grid('on')"
+    "ax.grid()"
    ]
   }
  ],
