--- a/Project.ipynb
+++ b/Project.ipynb
@@ -27,8 +27,16 @@
     "\n",
     "ax.set(xlabel='time (s)', ylabel='voltage (mV)',\n",
     "       title='The simplest plot in the world')\n",
-    "ax.grid()"
+    "ax.grid('on')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8b16c62-ab98-419a-b1c3-fc090be91c7c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
